Add files again

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <div class="header-container">
             <div class="header">
                 <div class="company-name">Redsk8er Tech</div>
-                <div class="---link---"><a href="#" target="_blank" rel="noopener noreferrer">Empty Link</a></div>
-                <div class="contact"><a href="pages/contact.html">Contact &#9662;<a></div>
+                <div class="---link1---"><a href="pages/signup.html">Sign Up</a></div>
+                <div class="---link2---"><a href="pages/login.html">Log In</a></div>
+                <div class="contact"><a href="pages/contact.html">Contact Us!</a></div>
             </div>
         </div>
 
